# ePhotosynthesis_C

./: .gitignore  BF.hpp  BF_Ini.cpp  BF_MB.cpp  BF_Rate.cpp  CIMCom.cpp  CM.cpp  CM.hpp  CM_Drive2.cpp  CM_Ini.cpp  CM_mb.cpp  CMakeLists.txt  Condition.cpp  Doxyfile  Doxyfile.in  DynaPS.cpp  DynaPS.hpp  DynaPS_Drive.cpp  DynaPS_Ini.cpp  DynaPS_mb.cpp  EPS.hpp  EPS_Ini.cpp  EPS_mb.cpp  FI.hpp  FI.s  FIBF.hpp  FIBF_Ini.cpp  FIBF_MB.cpp  FI_Ini.cpp  FI_MB.cpp  FI_Rate.2  FI_Rate.cpp  FI_Rate.s  FluxAnnotation.xlsx  GRN_Reaction_map.txt  GenOut.cpp  IniModelCom.cpp  InputEvn_MATLAB.txt  InputSteps.txt  LICENSE.md  (+632 more)
.github/workflows/: check-matlab.yml  conda_recipe.yml  test-suite.yml
cmake/: AddYggInterface.cmake  FindSUNDIALS.cmake  FindSundials.cmake  InstallTools.cmake  SearchTools.cmake  TestTools.cmake  YggInterfaceConfig.cmake.in  YggdrasilTools.cmake  __init__.py.in  ePhotosynthesisConfig.cmake.in
d0/d08/: _dyna_p_s_condition_8hpp.html  _dyna_p_s_condition_8hpp.js  _dyna_p_s_condition_8hpp_source.html
d0/d0b/: classe_photosynthesis_1_1_r_c_1_1_f_i_r_c__coll__graph.md5
d0/d10/: enums__helpers_8hpp__dep__incl.map  enums__helpers_8hpp__dep__incl.md5
d0/d14/: _f_i_pool_8hpp__incl.map  _f_i_pool_8hpp__incl.md5
d0/d22/: _redox_reg___ini_8cpp.html  _redox_reg___ini_8cpp.js  _redox_reg___ini_8cpp_af0900ee78b155335ebe466494782cce3_cgraph.map  _redox_reg___ini_8cpp_af0900ee78b155335ebe466494782cce3_cgraph.md5  _redox_reg___ini_8cpp_source.html
d0/d2e/: classe_photosynthesis_1_1__value_set_static_member.html  classe_photosynthesis_1_1__value_set_static_member.js
d0/d38/: classe_photosynthesis_1_1vel_1_1_p_s_vel__inherit__graph.map  classe_photosynthesis_1_1vel_1_1_p_s_vel__inherit__graph.md5
d0/d3a/: namespacee_photosynthesis.html  namespacee_photosynthesis.js  namespacee_photosynthesis_a054f2ee280cb579cd643854fe9a37f84_cgraph.map  namespacee_photosynthesis_a054f2ee280cb579cd643854fe9a37f84_cgraph.md5  namespacee_photosynthesis_a1b0dae9e9a8039d2ec5fe5f1fc7894dc_cgraph.map  namespacee_photosynthesis_a33fa231dcdcbaab4545813e70597d02d_cgraph.map  namespacee_photosynthesis_a33fa231dcdcbaab4545813e70597d02d_cgraph.md5  namespacee_photosynthesis_a36f22f7aeb573aadb09be51b941421ec_icgraph.map  namespacee_photosynthesis_a36f22f7aeb573aadb09be51b941421ec_icgraph.md5  namespacee_photosynthesis_a4ce26772eb6f8a1f90a759df00472baf_cgraph.map  namespacee_photosynthesis_a4ce26772eb6f8a1f90a759df00472baf_cgraph.md5  namespacee_photosynthesis_a4ce26772eb6f8a1f90a759df00472baf_icgraph.map  namespacee_photosynthesis_a4ce26772eb6f8a1f90a759df00472baf_icgraph.md5  namespacee_photosynthesis_a56278b87a74917fead3152d3804e4529_cgraph.map  namespacee_photosynthesis_a56278b87a74917fead3152d3804e4529_cgraph.md5  namespacee_photosynthesis_a56278b87a74917fead3152d3804e4529_icgraph.map  namespacee_photosynthesis_a56278b87a74917fead3152d3804e4529_icgraph.md5  namespacee_photosynthesis_a5c9b6cc505faff9333197f46dedf88c4_icgraph.map  namespacee_photosynthesis_a5c9b6cc505faff9333197f46dedf88c4_icgraph.md5  namespacee_photosynthesis_a68552d47e19d8f3a938ea06b6f0eae27_cgraph.md5  namespacee_photosynthesis_a9c5fbb1846e08333f020166459457c73_cgraph.map  namespacee_photosynthesis_a9c5fbb1846e08333f020166459457c73_cgraph.md5  namespacee_photosynthesis_a9c5fbb1846e08333f020166459457c73_icgraph.map  namespacee_photosynthesis_a9c5fbb1846e08333f020166459457c73_icgraph.md5  (+8 more)
docs/: api.dox  api.md  conversion.md  installation.md  main.md  newmodule.md  python.md  run.md  structure.md
include/: BF.hpp  CM.hpp  CVodeMem.hpp  DynaPS.hpp  EPS.hpp  FI.hpp  FIBF.hpp  PR.hpp  PS.hpp  PS_PR.hpp  RA.hpp  RROEA.hpp  RedoxReg.hpp  RuACT.hpp  SUCS.hpp  ValueSet.hpp  Variables.hpp  XanCycle.hpp  cxxopts.hpp  definitions.hpp  driver.hpp  ePhotosynthesis.hpp  globals.hpp  macros.hpp  macros_iter.hpp  ssPS.hpp  trDynaPS.hpp
param/: ALL_VARS.txt  BF_COND.txt  BF_MOD.txt  BF_POOL.txt  BF_RC.txt  BF_VEL.txt  BF_constants.txt  BF_init.txt  CM_CTRL.txt  FIBF_COND.txt  FIBF_MOD.txt  FIBF_POOL.txt  FI_COND.txt  FI_MOD.txt  FI_POOL.txt  FI_RC.txt  FI_VEL.txt  FI_conditions.txt  FI_constants.txt  FI_init.txt  GLOBAL_VARS.txt  PR_COND.txt  PR_MOD.txt  PR_RC.txt  PR_VEL.txt  PR_constants.txt  PR_init.txt  PR_rate_constants.txt  PS_COND.txt  PS_MOD.txt  PS_RC.txt  PS_VEL.txt  PS_constants.txt  PS_init.txt  README.txt  RROEA_COND.txt  RROEA_KE.txt  RROEA_MOD.txt  RROEA_POOL.txt  RROEA_RC.txt  (+34 more)
recipe/: bld.bat  bld_cpp.bat  bld_python.bat  build.sh  build_cpp.sh  build_python.sh  meta.yaml
run/: InputEvn.txt  InputEvn2.txt  compile_test.sh  run_ePhotoC_compareBioCro_dev.R  run_ephoto_test.cpp
scripts/: README.md  convert.py  devtasks.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+137 more)
source/: BF_Ini.cpp  BF_MB.cpp  BF_Rate.cpp  CM.cpp  CM_Drive2.cpp  CM_Ini.cpp  CM_mb.cpp  CVodeMem.cpp  Condition.cpp  DynaPS.cpp  DynaPS_Drive.cpp  DynaPS_Ini.cpp  DynaPS_mb.cpp  EPS.cpp  EPS_Drive.cpp  EPS_Ini.cpp  EPS_mb.cpp  FIBF_Ini.cpp  FIBF_MB.cpp  FI_Ini.cpp  FI_MB.cpp  FI_Rate.cpp  GenOut.cpp  PRinitial.cpp  PRmb.cpp  PRrate.cpp  PSI.cpp  PSInitial.cpp  PSRate.cpp  PS_PRIni.cpp  PS_PRmb.cpp  PSmb.cpp  RA_Ini.cpp  RA_mb.cpp  RROEA_Ini.cpp  RROEA_Rate.cpp  RROEA_mb.cpp  RedoxReg_Ini.cpp  RedoxReg_Rate.cpp  RedoxReg_mb.cpp  (+18 more)
src/: CIMCom.cpp  Condition.cpp  EPS.cpp  GenOut.cpp  ParamSet.cpp  TargetFunVal.cpp  ValueSet.cpp  Variables.cpp  ePhotosynthesis.cpp  ssPSFun.cpp  trDynaPS.cpp
templates/: ContainerTemplate.cpp  ContainerTemplate.hpp  DriverTemplate.cpp  DriverTemplate.h  DriverTemplate.hpp  ModuleInit.cpp  ModuleMB.cpp  ModuleRate.cpp  ModuleTemplate.hpp
utils/: compare_matlab.py  generate_enum.py  generate_macros.py
(+3391 files in other folders)
